--- a/stylesheets/02_layout_screen.css
+++ b/stylesheets/02_layout_screen.css
@@ -297,7 +297,7 @@ code {
 }
 
 body.videos #thumbnails img {
-  width:                240px;
+  max-width:            240px;
 }
 /* /Thumbnails */
 
