--- a/stylesheets/10_typography.css
+++ b/stylesheets/10_typography.css
@@ -199,21 +199,30 @@ strong {
   text-transform:       uppercase;
 }
 
-#footer a {
-  text-decoration:      none;
-}
-#footer a:hover {
-  text-decoration:      underline;
-}
-
-#footer h6 {
-  font-size:            70%;
-}
 
 #footer * {
   line-height:          1.25em;
   text-align:           right;
 }
+
+#footer h1, #footer h2, #footer h6 {
+  font-size:							70%;
+  font-variant:           normal;
+}
+
+#footer a, #footer h1 a:hover {
+  text-decoration:      none;
+}
+#footer a:hover, 
+#footer #beonthenet:hover, 
+#footer #improveit:hover {
+  text-decoration:      underline;
+}
+
+#footer h5 {
+  font-size:              75%;
+}
+
 
 #go_back_to_thumbnails {
   text-decoration:      none;
