--- a/stylesheets/40_layout_lteie7.css
+++ b/stylesheets/40_layout_lteie7.css
@@ -11,11 +11,11 @@ hr {
 
 
 #header ul {
-  top:                  66px;
+  top:                  56px;
 }
 
-#global_search {
-  top:                  2.4em;
+#query {
+  top:                  31px;
 }
 
 #slogan {
