--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -112,6 +112,10 @@ code {
   position:             relative;
 }
 
+#header p {
+  margin:               0;
+}
+
 #logo_print {
   display:              none;
 }
@@ -129,52 +133,45 @@ code {
 }
 
 #header ul {
-	height:               1.4em;
-	margin-left:          0;
+	height:               43px;
+  padding-right:        10px;
+	padding-left:         20px;
 	position:             absolute;
-  top:                  51px;
-	right:                0;
-	left:                 24em;
-	overflow:             hidden;
+  top:                  40px;
+  right:                170px;
 }
 
 #header li {
 	display:              inline;
-	padding:              0.5em 0 0;
-	position:             relative;
-	top:                  0;
+  padding:              0;
 }
 
 #header li a {
+  line-height:          40px;
   padding:              .5em .65em 0em 0.35em;
   margin-left:          0%;
 }
 
 #global_search {
-  width:                7.5em;
-  padding-left:         23px;
-  margin-top:           30px;
+  width:                170px;
+  height:               43px;
   position:             absolute;
-  top:                  2.5em;
-  right:                1.85em;
-}
-
-#global_search fieldset {
-  padding-right:        10px;
+  top:                  56px;
+  right:                0;
 }
 
 #global_search #search_type {
   display:              none;
 }
 
-#global_search #query {
-	width:                100%;
-	height:               1.1em;
-	padding:              0;
-	border-width:         1px 0;
-  border-style:         solid;
-	outline:              none;
-	margin:               0;
+#query {
+  width:                  112px;
+  height:                 22px;
+  padding:                0 10px 0 25px;
+  border:                 none;
+  position:               absolute;
+  right:                  23px;
+  top:                    28px;
 }
 /* /Header */
 
