--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -326,7 +326,8 @@ code {
 }
 
 body.videos #thumbnails img {
-  max-width:            240px;
+/*  max-width:            240px;*/
+  width:                240px;
 }
 /* /Thumbnails */
 
