--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -345,7 +345,7 @@ body.videos #thumbnails img {
 #big_picture a, #big_video a {
   width:                4.75em;
   position:             absolute;
-  top:                  18em;
+  top:                  120px;
 }
 
 #big_picture #previous, #big_video #previous {
