--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -236,7 +236,7 @@ code {
   margin-left:          -138px;
 }
 
-#go_to_selection a {
+#go_to_selection {
   width:                9em;
   height:               4em;
   padding-top:          1em;
