Templates foram adaptados para acomodar HTML e CSS do Flickr.

--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -750,6 +750,55 @@ p#not_found {
 /* /Text */
 
 
+/* Flickr */
+#main_content h5 {
+  padding:            0;
+  margin:             -3.25em 0 2em;
+}
+#gallery #main_content h5, #search #main_content h5 {
+  margin:             -2.7em 0 1.1em;
+}
+
+#main_content h5 a, #big_picture cite a {
+  display:            inline-block;
+  width:              37px;
+  overflow:           hidden;
+  vertical-align:     bottom;
+}
+
+#thumbnails cite {
+  display:            block;
+  width:              15px;
+  height:             8px;
+  margin:             0;
+  position:           absolute;
+  right:              1px;
+  bottom:             251px;
+  overflow:           hidden;
+}
+
+#thumbnails cite a {
+  display:            inline-block;
+  padding-top:        8px;
+}
+
+#big_picture #view_on_flickr, 
+#big_picture cite a {
+  position:           static;
+}
+
+#big_picture cite {
+  position:           absolute;
+  top:                -19px;
+  right:              0;
+}
+
+body #footer h6 {
+  margin:             2em 0 -.5em;
+}
+/* /Flickr */
+
+
 /* Disappearing content */
 hr, .emtpy, #thumbnails li.empty, #selected_pictures li.empty {
   display:              block;
