--- a/stylesheets/10_typography.css
+++ b/stylesheets/10_typography.css
@@ -408,3 +408,34 @@ p#not_found, .application #main_content h2 {
 .application #main_content ul li a:hover, #valid_search_suggestions a:hover, .go_to_checkout a:hover {
   text-decoration:      none;
 }
+
+
+/* Flickr */
+#main_content h5, #main_content h5 a, 
+#big_picture cite {
+  font-style:         normal;
+  font-weight:        normal;
+  line-height:        1.5em;
+}
+
+#main_content h5, #big_picture cite {
+  font-size:          70%;
+  text-align:         right;
+}
+
+#main_content h5 a, #big_picture cite a {
+  text-indent:        38px;
+}
+#main_content h5 a:hover {
+  text-decoration:    underline;
+}
+
+#thumbnails cite {
+  font-size:          60%;
+}
+
+body #footer h6 {
+  font-size:          10px;
+  letter-spacing:     .02em;
+}
+/* /Flickr */
